# Merkle-Patricia-Trie

./: .gitignore  README.md  api_server.py  demo.py  pyproject.toml  render.yaml
.github/workflows/: deploy-gh-pages.yml
benchmark/: __init__.py  plain_merkle.py  plot_incremental_updates.py  plot_lookup_time.py  plot_proof_size_curves.py  run_proof_size.py
db/: .gitkeep  test_mpt.db
db/stress_rocks/: 000009.sst  000017.sst  000029.sst  IDENTITY  LOG  LOG.old.1776449454338208  LOG.old.1776449545747048  LOG.old.1776449552129648  LOG.old.1776453164999691  MANIFEST-000021  MANIFEST-000033  MANIFEST-000045
db/test_mpt_rocks/: 000009.sst  000017.sst  000033.sst  000058.sst  IDENTITY  LOG  LOG.old.1776449448250674  LOG.old.1776449450077876  LOG.old.1776449545206301  LOG.old.1776449545372583  LOG.old.1776449545502340  LOG.old.1776453159791376  LOG.old.1776453159929050  LOG.old.1776453160034804  MANIFEST-000025  MANIFEST-000041  MANIFEST-000045  MANIFEST-000066  OPTIONS-000047
mpt/: __init__.py  constants.py  ethereum.py  interfaces.py  nibbles.py  nodes.py  persistent.py  proof.py  store.py  trie.py  visualize.py
mpt/storage/: memory.py  rocks.py  sqlite.py
tests/: test_ethereum.py  test_proof.py  test_store.py  test_trie.py  test_visualize.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.svelte  GraphView.svelte  app.css  app.d.ts
web/src/lib/: ExpandableHex.svelte  ExpandableHex.svelte.d.ts
