[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mpt"
version = "0.1.0"
description = "Merkle Patricia Trie with proofs and visualization (educational)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rlp>=3.0",
    "pycryptodome>=3.19",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
web = ["fastapi>=0.100", "uvicorn[standard]>=0.22", "rocksdict>=0.3"]
leveldb = ["plyvel>=1.5.0"]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mpt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
